# grainofsalt

./: AUTHORS  CMakeLists.txt  COPYING  INSTALL  Makefile.am  NEWS  README  TODO  configure.in
Decription-Tools-2010/: Makefile  TCS10.tex  sigproc.bib
Presentation-Tools/: tools.tex
espresso/: CMakeLists.txt
espresso/main/: Makefile.am  cvrin.c  cvrout.c  espresso.h  main.c  main_original.c  pair.c  unate.c
espresso/mincov/: Makefile.am  part.c
espresso/sparse/: Makefile.am  matrix.c
espresso/util/: Makefile.am
generator/: CMakeLists.txt  Makefile.am  SolverTypes.h  bestbits.cpp  bestbits.h  cipher.cpp  cipher.h  cipherdesc.cpp  cipherdesc.h  data_holder.cpp  data_holder.h  dataelement.cpp  dataelement.h  dataelementrange.cpp  dataelementrange.h  debug.cpp  debug.h  defines.h  equation.cpp  equation.h  equationholder.cpp  equationholder.h  equationstosat.cpp  equationstosat.h  extendedmonomial.cpp  extendedmonomial.h  filereader.h  grain-of-salt.cpp  grain-of-salt.h  main.cpp  monomial.cpp  monomial.h  mystack.cpp  mystack.h  output_maker.cpp  output_maker.h  polynomial.cpp  polynomial.h  solverattrib.cpp  solverattrib.h  (+6 more)
