# not a GNU package. You can remove this line, if
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 1.4

SUBDIRS = espresso generator
EXTRA_DIST = build/hitag2 build/trivium build/bivium \
	     build/good_default_options.txt build/crypto1 \
	     build/grain

all-local:
	cp generator/grainofsalt .

