AC_INIT(grainofsalt, 1)

AC_LANG_CPLUSPLUS
AC_PROG_CXX
AC_LANG(C++)

AM_INIT_AUTOMAKE
AC_CONFIG_MACRO_DIR([m4])
LT_INIT
AC_CONFIG_HEADERS(config.h)
AC_CHECK_HEADERS(iostream)

AC_OUTPUT(Makefile generator/Makefile espresso/Makefile espresso/main/Makefile espresso/util/Makefile espresso/sparse/Makefile espresso/mincov/Makefile)
